# leir_schottky_rc_and_dc_scan

./: .gitignore  app.py  ecooler.ui  fftQuality.ui  fft_nxcals_settings.ui  leir_schottky_rc_and_dc_scan_app-0.0.1-py3-none-any.whl  leir_schottky_rc_and_dc_scan_app.py  leir_schottky_rc_and_dc_scan_app.ui  listernerWidget.py  ln3_debunch.ui  ln3_ramp.ui  mplCanvas.py  plot_p_mean_p_rms_scan_param.py  plot_power_spectrum.py  property_field.py  pyproject.toml  select_variable.ui  settings.py  settings.ui  timeSliceDelegate.py  time_slice_selection.ui  updaterWidget.py  widgetDelegate.py
