[project]
name = "app"
version = "0.0.1"
dependencies = [ "matplotlib==3.4.2", "comrad==0.1.1", "accwidgets[graph,led,log_console,property_edit,rbac,timing_bar]<2a0,>=1.3.2",]
description = "LEIR Schottky application to scan Linac 3 ramping and debunching cavities and monitor the beam momentum"
[[project.maintainers]]
name = "Reyes ALEMANY FERNANDEZ"
email = "Reyes.Alemany.Fernandez@cern.ch"

[build-system]
requires = [ "comrad==0.1.1",]
build-backend = "comrad_package.builder"

[tool.comrad.package]
entrypoint = "app.py"
