[project]
name = "leir_schottky_rc_and_dc_scan_app"
version = "0.0.1"
dependencies = [ "accwidgets[graph,led,log_console,property_edit,rbac,timing_bar]<2a0,>=1.3.2", "matplotlib==3.4.2", "comrad==0.1.1",]
description = "LEIR Schottky comrad application that makes phase scans to the Linac 3 ramping and debunching cavities and monitors the beam momentum"
[[project.maintainers]]
name = "Reyes Alemany Fernandez"
email = "Reyes.Alemany.Fernandez@cern.ch"

[build-system]
requires = [ "comrad==0.1.1",]
build-backend = "comrad_package.builder"

[tool.comrad.package]
entrypoint = "leir_schottky_rc_and_dc_scan_app.py"
